# qr3D

./: README.md  Readme.rst  foobar.scad  foobar.stl  foobar.stl.scad  printedQr  requirements.txt  sample.stl  setup.cfg  setup.py
doc/: printedqr.wsgi
docs/: Readme.rst  sample.stl
printedQr/: printedQr.py
printedQrWeb/: __init__.py  index.html
printedQrWeb/static/css/: style.css
printedQrWeb/static/js/: script.js  thingiview.js
printedQrWeb/templates/: index.html
printedQr_/: printedQr.py
qr3d/: __init__.py
qr_printer/: __init__.py  openscad.py  printer.py
