[metadata]
name = qr3D
author = David Francos Cuartero
author-email = opensource@davidfrancos.net
summary = Get QR Codes ready for printing with a 3D Printer
description-file = Readme.rst
home-page = https://github.com/XayOn/katcr
license = Apache-2
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4


keywords =
    kickasstorrents

[files]
packages =
    qr3d

[entry_points]
console_scripts =
    qr3d = qr3d:execute

pbr.config.drivers =
    plain = pbr.cfg.driver:Plain
